# Nutrition-labeler

./: .env  .replit  README.md  index.html  index.js  package.json  pyproject.toml  simple_flask.py  vite.config.ts
app/: __init__.py  routes.py
app/models/: database.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
app/utils/: daily_values.py  image_generator.py  pdf_generator.py  simple_image_generator.py
assets/: index-116GDUz8.js  index-CDv2wMdd.js  index-CZZeIkbb.js  index-DSZL7cSW.js  index-DrDZzZYn.js  index-lWbISy84.css
backend/: package-lock.json  package.json
backend/client/src/components/: Content.tsx  NutritionLabel.tsx  NutritionTableUnitSwitcher.tsx  TextContentEditor.tsx
backend/db/: index.ts  seed.ts
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: Advertisement.tsx  Downloader.tsx  LabelEditor.tsx  Logo.tsx  NutritionForm.tsx  PreviewLabel.tsx  Sidebar.tsx  TextAnalyzer.tsx
client/src/lib/: dailyValues.ts
client/src/pages/: Home.tsx
client/src/types/: nutrition.ts
public/: index.html
public/assets/: index-BXUOLOpR.js
server/: index.ts  routes.ts  storage.ts  vite.ts
shared/: schema.ts
